feat: one sentence on why to submit a supp table

--- a/docs/50_data_publication/60_machine-readable_chemical_structures.mdx
+++ b/docs/50_data_publication/60_machine-readable_chemical_structures.mdx
@@ -85,9 +85,9 @@ SMILES and InChI as well as InChI Key are ideal for describing chemical structur
 
 ## Provide Machine-Readable Data as Supplementary Table
 
-Information to enhance machine-readability might be provided within a dataset as a [supplementary table](https://doi.org/10.1186/s13321-021-00520-4). This table should be provided in a machine-readable text-based format such as a CSV file.
+Information to enhance machine-readability might be provided within a dataset as a [supplementary table](https://doi.org/10.1186/s13321-021-00520-4), as there aren't open formats for all types of chemistry data available yet that would provide this information. This table should be provided in a machine-readable text-based format, such as a CSV file.
 
-The minimum and recommended columns of such a table are as follows:
+The minimum and recommended columns of such a table in chemistry are as follows:
 - Letter-code and number in your lab journal, i.e. a local sample identifier
 - Number(s) of structures in the article, i.e. a local structure identifier within your (corresponding) article
 - SMILES
