add: new structure template (comment)

--- a/docs/10_domains/20_physical_chemistry.mdx
+++ b/docs/10_domains/20_physical_chemistry.mdx
@@ -14,6 +14,16 @@ import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
 Physical chemistry is an interdisciplinary science at the frontier between chemistry and physics, whose topics go beyond the classical areas of the respective individual sciences. While preparative chemistry focuses on questions of the methodology of chemical synthesis of known and new substances, physical chemistry attempts to describe the properties of substances and their transformation by applying concepts of physics to objects of chemistry by means of theoretical and experimental methods. Along with organic and inorganic chemistry, physical chemistry therefore represents one of the three key disciplines of "classical" chemistry, since it provides the theoretical basis for technical chemistry and process engineering. Its knowledge is also an integral part of many other disciplines and is used, for example, for description and understanding in biology and medicine, meteorology as well as the earth sciences. Due to this great interdisciplinarity and the use of numerous physicochemical methods in almost all areas of chemistry, a complete description of physical chemistry as profile is hardly possible, which is why this article explicitly makes no claim to do so.
 :::
 
+<!--new structure: 
+
+Introduction (Daten-bezogen) (Introduction)
+Welche Art von Daten? (Data Types)
+Welche ELNs / Tools bieten sich an? (ELNs and Other Tools) 
+Wie / Wo können Daten publiziert werden? (Repos nennen) (Repositories)
+Herausforderungen (Challenges)
+
+ -->
+
 # Methods Profiles
 
 ## EPR spectroscopy
