add: outlined new article in meetng

--- a/docs/10_domains/20_physical_chemistry.mdx
+++ b/docs/10_domains/20_physical_chemistry.mdx
@@ -17,12 +17,46 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 <!--new structure: 
 
 Introduction (Daten-bezogen) (Introduction)
-Welche Art von Daten? (Data Types)
-Welche ELNs / Tools bieten sich an? (ELNs and Other Tools) 
-Wie / Wo können Daten publiziert werden? (Repos nennen) (Repositories)
-Herausforderungen (Challenges)
+- diverse methodology can be used to analyze a broad range of subjects -> results in diverse types of data formats 
+- large datasets 
+- rather data-literate 
 
+Welche Art von Daten? (Data Types)
+- eigene Skripte (python, jupyter, matlab)
+
+
+Welche ELNs / Tools bieten sich an? (ELNs and Other Tools) 
+- elabftw
+- (openBIS)
+- Omero (Tool, UDE nutzt OME+eLabFTW)
+- NOMAD
+- iochem-bd
+- git (Versionierung Skripte)
+- Datalad ('git für Forschungsdaten/Metadaten') 
+
+Wie / Wo können Daten publiziert werden? (Repos nennen) (Repositories)
+- RADAR4Chem -> alles
+- iochem-bd (comp. chemistry)
+- NOMAD (simulations)
+- Image Data Resource (https://idr.openmicroscopy.org/) 
+
+
+Herausforderungen (Challenges)
+- non-bio imaging data missing repo/long-term archive
+- large datasets can be difficult to manage and publish
+- diverse methodology can be used to analyze a broad range of subjects
+- no unified tool to manage everything (such as chemotion)
  -->
+
+<!-- images? -->
+
+
+<!-- Nikki's suggestions: 
+- Extend table to see what data types are supported by which tools (this could also assist infrstructure providers in gap analysis)
+- Can include methods and data types from SFB 985/RWTH
+-->
+
+
 
 # Methods Profiles
 
