add: link to methods table in gdrive

--- a/docs/10_domains/20_physical_chemistry.mdx
+++ b/docs/10_domains/20_physical_chemistry.mdx
@@ -53,7 +53,7 @@ Herausforderungen (Challenges)
 
 <!-- Nikki's suggestions: 
 - Extend table to see what data types are supported by which tools (this could also assist infrstructure providers in gap analysis)
-- Can include methods and data types from SFB 985/RWTH
+- Can include methods and data types from SFB 985/RWTH (https://docs.google.com/spreadsheets/d/1gdi5gUH3cy4I2sy055IPqOKvfBDzRouW/edit?usp=drive_link&ouid=109474882186950125832&rtpof=true&sd=true)
 -->
 
 
