add: (attempt) first draft on data types

--- a/docs/10_domains/20_physical_chemistry.mdx
+++ b/docs/10_domains/20_physical_chemistry.mdx
@@ -17,13 +17,16 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 <!--new structure: 
 
 Introduction (Daten-bezogen) (Introduction)
-- diverse methodology can be used to analyze a broad range of subjects -> results in diverse types of data formats 
-- large datasets 
-- rather data-literate 
+- [x] diverse methodology can be used to analyze a broad range of subjects -> results in diverse types of data formats 
+- [x] large datasets (nikki: könnte ich noch besser beschreiben, aber ich denke das kann man in Challenges nochmal angehen)
+- [x] rather data-literate 
 
 Welche Art von Daten? (Data Types)
-- eigene Skripte (python, jupyter, matlab)
-
+- text-basierte Dateien (z.B. Oberflächenanalyse)
+- Datanbanken (zetasizer: sqlite)
+- imaging (inkl. image stacks)
+- Code (from small scripts to software; python, jupyter, matlab)
+- Simulations (input files, output)
 
 Welche ELNs / Tools bieten sich an? (ELNs and Other Tools) 
 - elabftw
@@ -56,20 +59,27 @@ Herausforderungen (Challenges)
 - Can include methods and data types from SFB 985/RWTH (https://docs.google.com/spreadsheets/d/1gdi5gUH3cy4I2sy055IPqOKvfBDzRouW/edit?usp=drive_link&ouid=109474882186950125832&rtpof=true&sd=true)
 -->
 
-# Introduction 
+## Introduction 
 
-Physical Chemistry encompasses a variety of sub-dicsiplines, covering vast methodology, which, in turn produce heterogenous data. 
-From spectroscopic measurement data, imaging, to simulation input files and in-house data analysis code, many physical chemists are experienced in handling digital data. 
-They are often well-versed in developing software solutions to support their work. While some work with large data volumes on a regular basis, other methodologies result in small, text-based files. This discipline includes many data-literate members, the expertise of which may be harnessed to implement tools and solutions to manage their research group's data in a unified and streamlined manner. 
+Physical Chemistry encompasses a variety of sub-disciplines, covering vast methodology, which, in turn produce heterogenous data. 
+From spectroscopic measurement data, imaging, to simulation input files and in-house data analysis code, many physical chemists are experienced in handling digital data. They are often well-versed in developing software solutions to support their work. While some work with large data volumes on a regular basis, other methodologies result in small, text-based files. This discipline includes many data-literate members, the expertise of which may be harnessed to implement tools and solutions to manage their research group's data in a unified and streamlined manner. 
 
-# Data Types 
+## Data Types 
 
-## Methods Data Format Overview
+As mentioned, the data produced in physical chemistry and its diverse sub-disciples are varied. One research group may work intensively with imaging data such as superresolution microscopy, while the other may work on method development, and again others may analyze spectroscopic data or conduct numeric simulations—or even any combination of these. The table below provides and overview of typical methods employed along with their data types and recommended formats.
+
+### Methods Data Format Overview
+
+<!--need to update-->
 
 <Methods defaultProfile={"physical"} />
 
-:::note *This table will be continuously updated with new recommendations on interoperable open file formats.
-:::
+:::note *This table will be continuously updated with new recommendations on interoperable open file formats.:::
+
+## ELNs and Other Tools
+
+
+
 
 
 <!-- old content
