--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Data Publication"
+title: "Publishing Data"
 slug: "/data_publication"
 id: "data_publication"
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-# Data Publication
+# Publishing Data
 
 :::info Applies to:
 This page applies to all researchers who want to publish their data.
