--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -13,8 +13,17 @@ This page is under construction, while you are welcome to read the already exist
 
 During deposition of research data, a [persistent identifier (PID)](/docs/pid) is assigned to the data. Authors should use PIDs in their article for interlinking in two main ways:
 
--   For corresponding data, i.e. directly underlying the results reported in the article, add the PID to the article's [data availability statement](/docs/data_availability_statement), or a similarly termed section. If you believe that your data publication is as decisive as the article itself, add your dataset to the references as well and cite within the text. <!--Vielleicht eher "In order to specifically reference your data within the text, add your dataset to the refernces as well. -->
--   For datasets published by other researchers and reused within a study, add the PID to the reference section of the manuscript and cite within the text accordingly.
+:::tip Standard
+*Authors should add the PID of the corresponding dataset(s) to the data availability statement. In addition, authors corresponding datasets to the references.*
+:::
+
+For corresponding data, i.e. directly underlying the results reported in the article, add the PID to the article's [data availability statement](/docs/data_availability_statement), or a similarly termed section. If you believe that your data publication is as decisive as the article itself, add your dataset to the references as well and cite within the text. <!--Vielleicht eher "In order to specifically reference your data within the text, add your dataset to the refernces as well. -->
+
+:::tip Standard
+*Authors should add PIDs to datasets by other researchers, which have been reused to the references rather than citing the corresponding article*
+:::
+
+For datasets published by other researchers and reused within a study, add the PID to the reference section of the manuscript and cite within the text accordingly.
 
 <!--Add note on relationType IsSupplementTo and IsSupplementedBy -->
 
@@ -26,10 +35,125 @@ For a set of reactions, samples, and analyses, to assemble a study, Collection P
 
 In addition, but second-tier, the PID of a related dataset could also be mentioned in the supplementary PDF, if such a document is generated.
 
-_This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License._
 
-![CC0 badge](/img/cc-zero.svg)
+## More Standards in Scientific Publication with Respect to Research Data
+
+The below outlines a collection of standards for scientific publishing. It serves as a resource for journal editors and publishers as well as infrastructure providers, e.g. research data repositories.
+
+:::tip Standard
+*Research data repositories should provide a Collection DOI to wrap datasets corresponding to one study.*
+:::
+
+Research data repositories may use individual DOIs to reference individual chemical reactions, molecules, or analytical datasets. Thus, many DOIs will then be relevant to the published study results. In order to facilitate the manuscript submission process, a single DOI that wraps all relevant data should be available. Furthermore, this ensure all data underlying a published manuscript can be viewed and referenced as a single collection.
+
+:::tip Standard
+*NFDI4Chem-supported research data repositories should contribute to Scholix.org (or a similar solution).*
+:::
+
+Scholix provides the framework for improving the links between scientific literature and research data as well as between data and data with the goal of providing high-level interoperability framework for exchanging information about these links. Thus, Scholix hubs, such as DataCite or OpenAire, contribute information on their metadata records, which contain information on connected digital objects.
+
+<!--scholix.org links funktionieren alle momentan (bei mir zumindest) nicht-->
+
+:::tip Standard
+*Journals should add data availability statements to their submission system.*
+:::
+
+During manuscript submission, editable templates should be provided to authors. This guides authors in correctly submitting underlying data with their manuscript and effectively communicating how to find and access the data, enabling the FAIR principles.
+
+:::tip Standard
+*Datasets published with an embargo period should have inaccessible data but accessible metadata.*
+:::
+
+While an embargo period restricts access to a published dataset, the metadata should still be accessible. This allows relevant information on the dataset to be retrieved, while guaranteeing first rights to the data to the authors.
+
+
+:::tip Standard
+*Articles should be linked in their DOI metadata with dataset(s) with relationship_type IsSupplementedBy and the dataset(s) should link with relationType IsSupplementTo.*
+:::
+
+This agrees with Crossref's documentation on linking datasets to published items. This establishes a structured link between both DOIs and ensures humans and machine's alike can interpret the relationship between the published objects.
+
+<!--Standard on how to publish NMR data, tbd-->
+
+
+:::tip Standard
+*URLs to access datasets under review should have the access credentials encoded in the URL.*
+:::
+
+Review links for datasets should have the access credentials encoded in the URL, rather than having separate login and password. This avoids having to forward these details to the reviewer via the submission system.
+
+:::tip Standard
+*Repositories should register a DOI and populate main fields such as creator and contributor, if a dataset is under review.*
+:::
+
+This ensures that journals may carry out automated quality control steps upon manuscript submission. Further details within the dataset's metadata and content may still be adjusted and updated before final publication.
+
+:::tip Standard
+*Author guidelines of journals should explicitly encourage pre-submission of datasets.*
+:::
+<!--was genau ist hiermit gemeint-->
+
+:::tip Standard
+*Research data repositories should provide the repository name as publisher in a dataset's metadata.*
+:::
+
+
+:::tip Standard
+*Research data repositories should provide their repository identifier by re3data.org as a relatedIdentifier with relationType IsPublishedIn.*
+:::
+
+To uniquely and persistently identify themselves within the dataset's metadata, repositories should provide repository identifier from re3data.org. These should be automatically populated metadata fields. If data has originally been published in another repository, the respective repository identifier should be used. The relationship is as follows.
+
+In the case of RADAR4Chem the relationship would be described as follows:
+
+> relatedIdentifier ->  relatedIdentifierType:DOI -> relationType:IsPublishedIn -> http://doi.org/10.17616/R3ZX96
+
+This ensures humans as well as machines can trace and interpret where the data has been published.
+
+:::tip Standard
+*Journals should recommend trusted, chemistry-friendly research data repositories.*
+:::
+
+To assist authors in selecting well-established and community-specific repositories for the research data, [trusted chemistry friendly repositories](docs/choose_repository) should be recommended by journals.  
+
+:::tip Standard
+*Research data repositories should allow researchers to update the metadata of the PID with their dataset.*
+:::
+
+:::tip Standard
+*Research data repositories should allow metadata corrections.*
+:::
+
+(version control?) 
+
+:::tip Standard
+*Research data repositories should inform authors and data curators about possible rights conflicts for the abstract field in the DataCite schema*
+:::
+
+Dataset's should have their own description as an abstract. Copying the related text publication abstract can results in a rights conflict with the respective publisher. Authors and data curators should be informed about this conflict when filling out a dataset's metadata.
+
+:::tip Standard
+*In research data repositories, licenses should be grouped in licenses for research data vs. licences for software.*
+:::
+
+Licenses differ for datasets and software. Thus, providing a grouping greatly aids authors in selecting from the correct set. 
+
+:::tip Standard
+*Research data repositories should guide users to choose a creative commons license while not making the overall landscape too complicated*
+:::
+
+In line with grouping licenses between software and datasets, pointing authors towards the selection of [creative commons (CC)](https://creativecommons.org/) license alleviates the selection process.  
+
+:::tip Standard
+*Research data repositories should pre-select licenses such as CC0 or CC BY 4.0 instead of more restrictive licenses such as CC BY-SA 4.0, which might highly complicate reuse.*
+:::
+
+Licenses can be confusing to authors. Shared data should be as open as possible, as closed as necessary with the intend of allowing and enabling others to reuse and build upon the work. Thus, encouraging rather open licences such as [CC0](https://creativecommons.org/public-domain/cc0/) and [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/) as opposed to more restrictive licenses such as [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/) or [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/).
+
+
+*This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License.*
 
 ---
 
-Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
+----
+Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661), [ORCID: 0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840)
