chore: selfhost cc0 badges

--- a/docs/50_data_publication/50_data_availability_statement.mdx
+++ b/docs/50_data_publication/50_data_availability_statement.mdx
@@ -56,7 +56,7 @@ Please note that data availability statements such as _'data available on reques
 
 _This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License._
 
-![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
+![CC0 badge](/img/cc-zero.svg)
 
 ---
 
