--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -12,8 +12,8 @@ Research data repositories are locations where digital objects are stored and ma
 
 Repositories can be classified mainly according to:
 
-- the type of objects to be stored (e.g. scientific articles or research data) and
-- the domain of the data contained (field-specific or generic repositories),
+-   the type of objects to be stored (e.g. scientific articles or research data) and
+-   the domain of the data contained (field-specific or generic repositories),
 
 Repositories can be hosted at institutional servers or are provided by broader organisations or consortia such as NFDI4Chem. The use of repositories is essential for data deposition according to the [FAIR Data Principles](/docs/fair).
 
@@ -23,15 +23,15 @@ A repository is constituted by a repository software and a database. Researchers
 
 Some, but not all, repositories curate and review the data before **ingestion** with regard to their content and quality, sometimes also regarding legal aspects (copyright, data protection, [licenses](/docs/licenses)).
 
-In order to allow data reuse by other researchers, [metadata](/docs/metadata), including [provenance information](/docs/provenance/), are required beside the actual data. Metadata describe the research data and provide information about its creation, the methods or software used as well as legal aspects. Metadata can be either added manually via a metadata editor or can be provided through other applications. The process to manually add metadata via a metadata editor can be compared to the process of submitting a manuscript to a publisher via the publishers submission system. 
+In order to allow data reuse by other researchers, [metadata](/docs/metadata), including [provenance information](/docs/provenance/), are required beside the actual data. Metadata describe the research data and provide information about its creation, the methods or software used as well as legal aspects. Metadata can be either added manually via a metadata editor or can be provided through other applications. The process to manually add metadata via a metadata editor can be compared to the process of submitting a manuscript to a publisher via the publishers submission system.
 
-One main function of repositories is to provide a search function, with which users and machines can find, view, and download data. In order to ensure that data are permanently referenced and can be [linked and cited](/docs/best_practice/#how-to-use-dataset-pids-in-scientific-articles), repositories assign unique [persistent identifiers](/docs/pid) (PIDs). This also enhances the findability and accessibility of research data. 
+One main function of repositories is to provide a search function, with which users and machines can find, view, and download data. In order to ensure that data are permanently referenced and can be [linked and cited](/docs/best_practice/#how-to-use-dataset-pids-in-scientific-articles), repositories assign unique [persistent identifiers](/docs/pid) (PIDs). This also enhances the findability and accessibility of research data.
 
-Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensures that the data is citable, preserved in the long run, and may also cover aspects of data curation and data quality. 
+Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensures that the data is citable, preserved in the long run, and may also cover aspects of data curation and data quality.
 
 ## Finding the right repository
 
-Because of the multitudes of data repositories existing, users can better orient themselves using a research data repository registry such as [Re3data](https://www.re3data.org/), [OpenDOAR](https://v2.sherpa.ac.uk/opendoar/about.html), [ROAR](http://roar.eprints.org/), and [FAIRsharing](https://fairsharing.org/). Repository registry services are an essential component of the [FAIR Data Principles](/docs/fair) as they should help researchers navigate through thousands of data repository services to find the most appropriate repository for their data. 
+Because of the multitudes of data repositories existing, users can better orient themselves using a research data repository registry such as [Re3data](https://www.re3data.org/), [OpenDOAR](https://v2.sherpa.ac.uk/opendoar/about.html), [ROAR](http://roar.eprints.org/), and [FAIRsharing](https://fairsharing.org/). Repository registry services are an essential component of the [FAIR Data Principles](/docs/fair) as they should help researchers navigate through thousands of data repository services to find the most appropriate repository for their data.
 
 However, due to complex landscape of existing repositories, these registries tend to provide confusingly long lists that do not necessarily facilitate the selection of a suitable repository. Moreover, researchers should take the reuse policy, metadata sharing and availability, long-term availability of data, and public accessibility of a repository into account, which is often not obvious or easy to figure out.
 
@@ -40,15 +40,17 @@ To ease the selection of a suitable research data repository for chemistry resea
 :::
 
 ## Sources and further information
-- [Repository Platforms for Research Data IG](https://www.rd-alliance.org/groups/repository-platforms-research-data.html)
-- [FAIRsFAIR Repository Support Series: Using registries to improve the visibility of your repository service](https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository)
-- [The Repository Chemotion: infrastructure for sustainable research in chemistry](https://doi.org/10.1002/anie.202007702)
-- [Chemotion ELN: an open source electronic lab notebook for chemists in academia](https://doi.org/10.1186/s13321-017-0240-0)
-- German: [Was ist ein Repositorium? Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
 
-*This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License.*
+-   [Repository Platforms for Research Data IG](https://www.rd-alliance.org/groups/repository-platforms-research-data.html)
+-   [FAIRsFAIR Repository Support Series: Using registries to improve the visibility of your repository service](https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository)
+-   [The Repository Chemotion: infrastructure for sustainable research in chemistry](https://doi.org/10.1002/anie.202007702)
+-   [Chemotion ELN: an open source electronic lab notebook for chemists in academia](https://doi.org/10.1186/s13321-017-0240-0)
+-   German: [Was ist ein Repositorium? Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
 
-![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
+_This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License._
 
-----
+![CC0 badge](/img/cc-zero.svg)
+
+---
+
 Main authors: [ORCID:0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840) and [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
