--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -296,7 +296,7 @@ Quick stats:
 
 _This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License._
 
-![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
+![CC0 badge](/img/cc-zero.svg)
 
 ---
 
